src/test/deca/syntax/valid/test_dir/added/parser/print_empty.deca
// Description:
//    test to print nothing
//
// Results:
//    test_lex --> no error, return 6 tokens
//    test_synt --> no error, return tree with 1 instruction
//
// History:
//    created on 04/01/2022

{
    print();
}